tests/ui/rfc-2091-track-caller/error-with-naked.stderr
error[E0736]: cannot use `#[track_caller]` with `#[naked]`
  --> $DIR/error-with-naked.rs:6:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^

error[E0736]: cannot use `#[track_caller]` with `#[naked]`
  --> $DIR/error-with-naked.rs:16:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^

error[E0737]: `#[track_caller]` requires Rust ABI
  --> $DIR/error-with-naked.rs:6:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^

error[E0737]: `#[track_caller]` requires Rust ABI
  --> $DIR/error-with-naked.rs:16:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0736, E0737.
For more information about an error, try `rustc --explain E0736`.
